--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,26 @@
-.App {
-  text-align: center;
+*{
+  margin: 0 ;
+  padding: 0;
+  box-sizing: border-box;
 }
+body{
+  background-color: #07081A;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container{
+  width: 1630px;
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 0 15px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+::-webkit-scrollbar{
+  width: 13px;
 }
-
-.App-link {
-  color: #61dafb;
+::-webkit-scrollbar-track{
+  background: #07081A;
+  box-shadow: inset 0 0 5px rgba(0,0,0,0.5);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+::-webkit-scrollbar-thumb{
+  background: #1668C1;
+  border-radius: 15px;
 }
