--- a/src/Style/AboutUs/Hero.css
+++ b/src/Style/AboutUs/Hero.css
@@ -1,15 +1,18 @@
-.Hero{
+.About__Hero{
+    margin-top: 200px;
+}
+.About__Hero{
     margin-top: 350px;
     margin-bottom: 200px;
 }
-.Hero h1{
+.About__Hero h1{
     color: white;
     font-family: "Roboto Mono", monospace;
     text-align: center;
     font-size: 50px;
     margin-bottom: 10px;
 }
-.Hero h2{
+.About__Hero h2{
     color: white;
     width: 950px;
     text-align: center;
@@ -17,7 +20,7 @@
     font-family: "Roboto Mono", monospace;
     font-size: 32px;
 }
-.Hero h1 span{
+.About__Hero h1 span{
     color: #1668C1;
 }
 .Hero__subtitle{
@@ -27,7 +30,7 @@
     font-size: 20px;
     margin-top: 20px;
 }
-.Hero a{
+.About__Hero a{
     margin:  0 auto;
     display: block;
     margin-top: 50px;
@@ -47,36 +50,36 @@
     justify-content: center;
     font-family: "Roboto Mono", monospace;
 }
-.Hero a:hover{
+.About__Hero a:hover{
     background-color: transparent;
     color: #1668C1;
 }
 @media(max-width:970px){
-    .Hero h2{
+    .About__Hero h2{
         width: auto;
     }
 }
 @media(max-width:750px){
-    .Hero h2{
+    .About__Hero h2{
         font-size: 35px;
     }
 }
 @media(max-width:600px){
-    .Hero h2{
+    .About__Hero h2{
         font-size: 25px;
     }
-    .Hero h1{
+    .About__Hero h1{
         font-size: 40px;
     }
-    .Hero{
-        margin-top: 250px;
+    .About__Hero{
+        margin-top: 150px;
     }
 }
 @media(max-width:430px){
-    .Hero h2{
+    .About__Hero h2{
         font-size: 20px;
     }
-    .Hero button{
+    .About__Hero button{
         font-size: 15px;
         margin-top: 20px;
     }
