--- a/src/Style/Portfolio/Hero.css
+++ b/src/Style/Portfolio/Hero.css
@@ -1,15 +1,15 @@
-.Hero{
+.HeroPort{
     margin-top: 350px;
     margin-bottom: 200px;
 }
-.Hero h1{
+.HeroPort h1{
     color: white;
     font-family: "Roboto Mono", monospace;
     text-align: center;
     font-size: 50px;
     margin-bottom: 10px;
 }
-.Hero h2{
+.HeroPort h2{
     color: white;
     width: 950px;
     text-align: center;
@@ -17,17 +17,17 @@
     font-family: "Roboto Mono", monospace;
     font-size: 32px;
 }
-.Hero h1 span{
+.HeroPort h1 span{
     color: #1668C1;
 }
-.Hero__subtitle{
+.HeroPort__subtitle{
     text-align: center;
     display: block;
     color: rgba(136, 136, 136, 0.733);
     font-size: 20px;
     margin-top: 20px;
 }
-.Hero a{
+.HeroPort a{
     margin:  0 auto;
     display: block;
     margin-top: 50px;
@@ -47,36 +47,36 @@
     justify-content: center;
     font-family: "Roboto Mono", monospace;
 }
-.Hero a:hover{
+.HeroPort a:hover{
     background-color: transparent;
     color: #1668C1;
 }
 @media(max-width:970px){
-    .Hero h2{
+    .HeroPort h2{
         width: auto;
     }
 }
 @media(max-width:750px){
-    .Hero h2{
+    .HeroPort h2{
         font-size: 35px;
     }
 }
 @media(max-width:600px){
-    .Hero h2{
+    .HeroPort h2{
         font-size: 25px;
     }
-    .Hero h1{
+    .HeroPort h1{
         font-size: 40px;
     }
-    .Hero{
-        margin-top: 250px;
+    .HeroPort{
+        margin-top: 150px;
     }
 }
 @media(max-width:430px){
-    .Hero h2{
+    .HeroPort h2{
         font-size: 20px;
     }
-    .Hero button{
+    .HeroPort button{
         font-size: 15px;
         margin-top: 20px;
     }
