--- a/src/Style/Service/Hero.css
+++ b/src/Style/Service/Hero.css
@@ -1,15 +1,15 @@
-.Hero{
+.Service__hero{
     margin-top: 350px;
     margin-bottom: 200px;
 }
-.Hero h1{
+.Service__hero h1{
     color: white;
     font-family: "Roboto Mono", monospace;
     text-align: center;
     font-size: 50px;
     margin-bottom: 10px;
 }
-.Hero h2{
+.Service__hero h2{
     color: white;
     width: 950px;
     text-align: center;
@@ -17,7 +17,7 @@
     font-family: "Roboto Mono", monospace;
     font-size: 32px;
 }
-.Hero h1 span{
+.Service__hero h1 span{
     color: #1668C1;
 }
 .Hero__subtitle{
@@ -27,7 +27,7 @@
     font-size: 20px;
     margin-top: 20px;
 }
-.Hero a{
+.Service__hero button{
     margin:  0 auto;
     display: block;
     margin-top: 50px;
@@ -40,43 +40,38 @@
     font-size: 20px;
     cursor: pointer;
     border: 2px solid #1668C1;
-    transition: 0.5s;
-    width: 150px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: "Roboto Mono", monospace;
+    transition: 0.5s     ;
 }
-.Hero a:hover{
+.Service__hero button:hover{
     background-color: transparent;
     color: #1668C1;
 }
 @media(max-width:970px){
-    .Hero h2{
+    .Service__hero h2{
         width: auto;
     }
 }
 @media(max-width:750px){
-    .Hero h2{
+    .Service__hero h2{
         font-size: 35px;
     }
 }
 @media(max-width:600px){
-    .Hero h2{
+    .Service__hero h2{
         font-size: 25px;
     }
-    .Hero h1{
+    .Service__hero h1{
         font-size: 40px;
     }
-    .Hero{
-        margin-top: 250px;
+    .Service__hero{
+        margin-top: 150px;
     }
 }
 @media(max-width:430px){
-    .Hero h2{
+    .Service__hero h2{
         font-size: 20px;
     }
-    .Hero button{
+    .Service__hero button{
         font-size: 15px;
         margin-top: 20px;
     }
